tests/paczka2/big_fuzzy/72763022.err
Error in line 1: mmF9SQ00 S274 39,9
Error in line 10: C8D9J3lPT S690 54,8
Error in line 15: WC6mw2 S690 194,6
Error in line 32: c60BPgawB S274 4,8
Error in line 33: c60BPgawB S214 16,3
Error in line 48: c60BPgawB S274 91,8
Error in line 62: c60BPgawB S668 60,2
Error in line 72: 4y22llMlvW8 S668 83,0
Error in line 74: c60BPgawB S668 51,7
Error in line 54: hXT0d390r7G S274 17,1
Error in line 83: C8D9J3lPT S274 118,0
Error in line 95: S668 S690 62,8
Error in line 96: C8D9J3lPT S274 34,9
Error in line 94: hXT0d390r7G S690 17,4
Error in line 97: S668 S668 89,4
Error in line 111: mmF9SQ00 S668 25,1
Error in line 119: mmF9SQ00 S690 1,3
Error in line 110: WC6mw2 A257 189,9
Error in line 122: 4y22llMlvW8 S668 75,1
Error in line 126: c60BPgawB S668 57,7
Error in line 120: S668 S668 69,6
Error in line 140: mmF9SQ00 S274 47,2
Error in line 145: 4y22llMlvW8 S24 49,4
Error in line 139: S668 A257 87,5
Error in line 141: mmF9SQ00 A257 46,3
Error in line 154: hXT0d390r7G S274 -4,3
Error in line 163: c60BPgawB S690 86,9
Error in line 162: mmF9SQ00 A257 43,7
Error in line 166: mmF9SQ00 S274 20,8
Error in line 173: 4y22llMlvW8 A257 9_,6
Error in line 147: 4y22llMlvW8 S274 4,9
Error in line 174: 4y22llMlvW8 A257 359,1
Error in line 182: 4y22llMlvW8 S668 53,3
Error in line 186: C8D9J3lPT S274 48,3
Error in line 193: C8D9J3lPT A257 54,0
Error in line 192: 4y22llMlvW8 S668 21,6
Error in line 194: c60BPgawB A257 67,5
Error in line 198: WC6mw2 A257 91,0
Error in line 206: WC6mw2 S274 40,6
Error in line 161: hXT0d390r7G S274 46,5
Error in line 215: mmF9SQ00 S690 25,1
Error in line 240: c60BPgawB S690 49,0
Error in line 234: S668 A257 74,8
